[tool.poetry]
name = "testgen"
version = "0.1.0"
description = "Generates unit tests"
authors = ["Nilay <nilay@compgeom.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
